syntax = "proto3";
package hkirat.twitos.twitos;

import "gogoproto/gogo.proto";
import "twitos/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/hkirat/twitos/x/twitos/types";

// GenesisState defines the twitos module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
